@@ -4,6 +4,9 @@ Sun May 19 18:59:00 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
 	  to not use freed memory.  Affected file is
 	  lib/silcclient/client_notify.c.
 
+	* Fixed CUMODE_CHANGE notify handling in server.  Affected
+	  file silcd/packet_receive.c.
+
 Sat May 18 11:35:19 EEST 2002 Pekka Riikonen <priikone@silcnet.org>
 
 	* Allow multiple identical pending commands to be registered
